// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composeDigest > EMAIL-05 — snapshot with failed firm included (footer format locked) > digest-with-failed-firm 1`] = `
"<!doctype html><html><body style="font-family:sans-serif;max-width:680px;margin:0 auto;padding:16px;">
    <h1 style="font-size:22px;">법률 다이제스트 2026-04-17</h1>
    
    <section><h2 style="font-size:18px;margin:24px 0 8px 0;">Cooley</h2>
      <div style="margin:0 0 16px 0;">
        <div><a href="https://cooley.com/news/insight/2026/2026-04-15-ai-reg">AI Regulation Update April 2026</a></div>
        <p style="margin:4px 0 0 0;color:#333;">4월 AI 규제 동향을 정리한 요약입니다. 핵심 3가지 변경사항을 다룹니다.</p>
      </div>
      <div style="margin:0 0 16px 0;">
        <div><a href="https://cooley.com/news/insight/2026/2026-04-10-ma">Second &lt;Article&gt; with HTML-ish Title</a></div>
        <p style="margin:4px 0 0 0;color:#999;font-style:italic;">요약 없음 — 본문 부족</p>
      </div>
      <div style="margin:0 0 16px 0;">
        <div><a href="https://cooley.com/news/insight/2026/2026-04-05-privacy">Title-only Article (B3 skipped)</a></div>
        <p style="margin:4px 0 0 0;color:#999;font-style:italic;">요약 없음 — 본문 부족</p>
      </div></section>
    <footer style="margin-top:32px;color:#999;font-size:12px;">
  <div>⚠ 이번 실행에서 수집 실패 — 다음 실행에서 재시도됩니다:</div>
  <ul style="margin:4px 0;"><li>Clifford Chance (clifford-chance) — http-503: RSS fetch clifford-chance: HTTP 503</li></ul>
</footer>
    <footer style="margin-top:32px;color:#888;font-size:12px;">AI 요약 — 원문 확인 필수</footer>
  </body></html>"
`;

exports[`composeDigest > HTML snapshot is stable 1`] = `
"<!doctype html><html><body style="font-family:sans-serif;max-width:680px;margin:0 auto;padding:16px;">
    <h1 style="font-size:22px;">법률 다이제스트 2026-04-17</h1>
    
    <section><h2 style="font-size:18px;margin:24px 0 8px 0;">Cooley</h2>
      <div style="margin:0 0 16px 0;">
        <div><a href="https://cooley.com/news/insight/2026/2026-04-15-ai-reg">AI Regulation Update April 2026</a></div>
        <p style="margin:4px 0 0 0;color:#333;">4월 AI 규제 동향을 정리한 요약입니다. 핵심 3가지 변경사항을 다룹니다.</p>
      </div>
      <div style="margin:0 0 16px 0;">
        <div><a href="https://cooley.com/news/insight/2026/2026-04-10-ma">Second &lt;Article&gt; with HTML-ish Title</a></div>
        <p style="margin:4px 0 0 0;color:#999;font-style:italic;">요약 없음 — 본문 부족</p>
      </div>
      <div style="margin:0 0 16px 0;">
        <div><a href="https://cooley.com/news/insight/2026/2026-04-05-privacy">Title-only Article (B3 skipped)</a></div>
        <p style="margin:4px 0 0 0;color:#999;font-style:italic;">요약 없음 — 본문 부족</p>
      </div></section>
    
    <footer style="margin-top:32px;color:#888;font-size:12px;">AI 요약 — 원문 확인 필수</footer>
  </body></html>"
`;
